--- a/web con plantilla final/contact.html
+++ b/web con plantilla final/contact.html
@@ -31,6 +31,31 @@
     <div id="wrapper">
         <!-- start header -->
         <header>
+
+            <div class="top hide">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="topleft-info">
+                                <li><i class="fa fa-phone"></i> +62 088 999 123</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <div id="sb-search" class="sb-search">
+                                <form>
+                                    <input class="sb-search-input" placeholder="Enter your search term..." type="text" value="" name="search" id="search">
+                                    <input class="sb-search-submit" type="submit" value="">
+                                    <span class="sb-icon-search" title="Click to start searching"></span>
+                                </form>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
             <nav>
                 <div class="navbar navbar-default navbar-static-top">
                     <div class="container">
@@ -65,35 +90,41 @@
         <!-- end header -->
 
 
-        <section class="content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-md-8">
-                        <div class="text-left">
-                            <h3>¿Tienes alguna duda?</h3>
-                            <p>¡Escríbenos y nosotros te la resolveremos!</p>
-                        </div>
-                        <div class="col-md-offset-0">
-                            <div id="chat">
-                                <form role="form">
-                                    <div class="form-group">
-                                        <label for="text-area">Chat</label>
-                                        <textarea rows="10" id="text-area" placeholder="Escribe aquí tu mensaje"></textarea>
-                                    </div>
-                                    <button type="submit" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-envelope"></span>Enviar</button>
-                                </form>
-                            </div>
-                        </div>
+        <section class="container">
+
+
+            <div class="col-lg-4  col-xs-offset-0 ">
+                <h3>¿Tienes alguna duda?<br><h4>Chat</h4></h3>
+                <hr class="colorgraph">
+     <!--           <div id="sendmessage">Your message has been sent. Thank you!</div>
+                <div id="errormessage"></div>
+                <form action="" method="post" role="form" class="contactForm">-->
+
+                    <div class="form-group">
+                        <textarea class="form-control" name="message" rows="10" data-rule="required" placeholder="Escribe aquí tu mensaje"></textarea>
+                        <div class="validation"></div>
                     </div>
-                </div>
+
+                    <div class="text-center">
+                        <button type="submit" "btn btn-default"><span class="glyphicon glyphicon-envelope"></span>Enviar</button>
+                    </div>
+                <hr class="colorgraph">
+            </div>
+            <div class="col-lg-4 col-lg-offset-0">
+                <h3>¿Dónde estamos?<br><h4>Datos</h4></h3>
+                <hr class="colorgraph">
+                <h5><span class="glyphicon glyphicon-home"></span> Dirección: <br> <br>  <li>C/ Picadilly, nº 7, Almería, Andalucía</li></h5>
+                 <h5><span class="glyphicon glyphicon-phone"></span> Teléfono: <br><br><li>653 115 307</li></h5>
+                <h5><span class="glyphicon glyphicon-print"></span> Fax:<br> <br><li></li></h5>
+                <h5><span class="glyphicon glyphicon-send"></span> E-mail:<br> <br><li></li></h5>
+                <hr class="colorgraph">
+            </div>    
+        
+            
+            <div class="google-maps col-lg-4 hidden-xs">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3193.118916160952!2d-2.3801382851769963!3d36.83962797994058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7a9bfec8b10fe5%3A0x7bb2dfecaa157bdf!2sCalle+Picadilly%2C+7%2C+04120+Almer%C3%ADa!5e0!3m2!1ses!2ses!4v1486315692844" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </section>
-
-
-
-
-
 
         <footer>
             <div class="container">
@@ -183,8 +214,35 @@
     <script src="js/uisearch.js"></script>
     <script src="js/jquery.cubeportfolio.min.js"></script>
     <script src="js/google-code-prettify/prettify.js"></script>
+    <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
     <script src="js/animate.js"></script>
     <script src="js/custom.js"></script>
+    <script>
+        jQuery(document).ready(function ($) {
+
+            //Google Map
+            var get_latitude = $('#google-map').data('latitude');
+            var get_longitude = $('#google-map').data('longitude');
+
+            function initialize_google_map() {
+                var myLatlng = new google.maps.LatLng(get_latitude, get_longitude);
+                var mapOptions = {
+                    zoom: 14,
+                    scrollwheel: false,
+                    center: myLatlng
+                };
+                var map = new google.maps.Map(document.getElementById('google-map'), mapOptions);
+                var marker = new google.maps.Marker({
+                    position: myLatlng,
+                    map: map
+                });
+            }
+            google.maps.event.addDomListener(window, 'load', initialize_google_map);
+
+        });
+    </script>
+
+    <script src="contactform/contactform.js"></script>
 
 
 </body>
