--- a/web con plantilla final/login.html
+++ b/web con plantilla final/login.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -185,14 +185,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
-!--					<div class="copyright">
+					<div class="copyright">
 						<p>&copy; Sailor Theme - All Right Reserved</p>
                         <div class="credits">
                           
                             <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
                         </div>
  				</div>
--->
+
 				</div>
 				<!--<div class="col-lg-6">
 					<ul class="social-network">
