--- a/web con plantilla final/project_fumi.html
+++ b/web con plantilla final/project_fumi.html
@@ -3,85 +3,75 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WADWolfram - Ensayo clínico del Dr. Fumihiko Urano</title>
+    <title>WADWolfram - Proyecto </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Bootstrap 3 template for corporate business" />
+    <meta name="description" content="Wolfram.org" />
     <!-- css -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="plugins/flexslider/flexslider.css" rel="stylesheet" media="screen" />
     <link href="css/cubeportfolio.min.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-
+    <link href="css/user.css" rel="stylesheet" />
 
     <!-- Theme skin -->
     <link id="t-colors" href="skins/default.css" rel="stylesheet" />
 
-
     <!-- boxed bg -->
     <link id="bodybg" href="bodybg/bg1.css" rel="stylesheet" type="text/css" />
 
-    <!-- =======================================================
-    Author: Group13. 2017
-======================================================= -->
+    <script src="js/user.js"></script>
 
 </head>
 
 <body>
 
-    <div id="wrapper">
 
+
+    <div id="wrapper">
         <!-- start header -->
         <header>
-            <div class="top hide">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div id="sb-search" class="sb-search">
-                                <form>
-                                    <input class="sb-search-input" placeholder="Enter your search term..." type="text" value="" name="search" id="search">
-                                    <input class="sb-search-submit" type="submit" value="">
-                                    <span class="sb-icon-search" title="Click to start searching"></span>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!--		<div class="top">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-6">
+							<ul class="topleft-info">
+								<li><i class="fa fa-phone"></i> +62 088 999 123</li>
+							</ul>
+						</div>
+						<div class="col-md-6">
+						<div id="sb-search" class="sb-search">
+							<form>
+								<input class="sb-search-input" placeholder="Enter your search term..." type="text" value="" name="search" id="search">
+								<input class="sb-search-submit" type="submit" value="">
+								<span class="sb-icon-search" title="Click to start searching"></span>
+							</form>
+						</div>
 
-        <nav>
+
+						</div>
+					</div>
+				</div>
+			</div>	-->
+
             <div class="navbar navbar-default navbar-static-top">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="199" height="52" /></a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li><a href="index.html">Inicio</a></li>
-                            <li class="active"><a href="projects.html">Proyectos</a></li>
-                            <!--  <li class="dropdown">
-                            <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Proyectos <i class="fa fa-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="newProyects.html">Proyectos Nuevos</a></li>
-                                <li><a href="oldProyects.html">Proyectos Antiguos</a></li>
-								<li class="dropdown-submenu">
-									<a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown">Pages</a>
-									<ul class="dropdown-menu">
-										<li><a href="404.html">404</a></li>
-										<li><a href="register.html">Register</a></li>
-										<li><a href="login.html">Login</a></li>
-									</ul>	
-								</li>
-                            </ul>
-                        </li>-->
-                            <li><a href="blog.html">Noticias</a></li>
-                            <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
-
-                            <li><a href="contact.html">Contacto</a></li>
+                            <li class="active"><a href="index.html">Inicio</a></li>
+                            <li><a href="proyects.html">Proyectos </a></li>
+                            <li><a href="blog.html">Noticias </a></li>
+                            <li><a href="contact.html">Contacto </a></li>
                             <li><a href="about.html">Sobre sus desarrolladores</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
+                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="register.html">Únete</a></li>
                                     <li><a href="login.html">Inicia sesión</a></li>
@@ -91,63 +81,76 @@
                     </div>
                 </div>
             </div>
-          </nav>
-        <section id="inner-headline">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <ul class="breadcrumb">
-                            <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-                            <li><a href="projects.html">Proyectos</a></li>
-                            <li class="active">Proyecto</li>
-                        </ul>
+            <section id="inner-headline">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <ul class="breadcrumb">
+                                <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                                <li><a href="projects.html">Proyectos</a></li>
+                                <li class="active">Proyecto</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-
+            </section>
         </header>
-
         <!-- end header -->
 
         <section id="content">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                      <header>
-                        <h4 class="heading">Ensayo clínico del Dr. Fumihiko Urano</h4>
-                      </header>
+                        <div class="text-center">
+                            <div class="inside">
+                                <h1>Ensayo clínico del Dr. Fumihiko Urano</h1>
+                                <div class="row" id="proyectPage">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div id="profilePhoto">
+                                                <img src="fotos/fumi.jpg" alt="Foto del investigador" id="proyectImage" class="img-responsive" />
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div id="information">
+                                                <p class="text-justify">Consiste en determinar la seguridad y efectividad de un medicamento para las personas, tanto niños como adultos, con síndrome de Wolfram con la finalidad de retrasar la progresión de dicho síndrome mediante los parámetros de la agudeza visual, del equilibrio y bioquímicos. Previamente se realizarán unos controles exhaustivos de los pacientes al igual que una vez finalizado el ensayo clínico.</p>
+                                                <p class="text-justify">El Dr. Fumihiko Urano es uno de los grandes investigadores en el área del síndrome de Wolfram. Actualmente está en fase de reclutamiento de pacientes para su ensayo clínico en Washington con la finalidad de determinar la seguridad de su principio activo en pacientes con síndrome de Wolfram, teniendo en cuenta que el objetivo del fármaco es retrasar el progreso de esta compleja enfermedad. Requiere, al menos, de 24 pacientes (12 adultos y 12 niños) para llegar a cabo tal ensayo. A consecuencia de los estudios y seguimiento exhaustivos que deben realizarse en tal proyecto, en esta fase sólo pueden participar pacientes que estén próximos a su clínica. Si los resultados obtenidos son óptimos, podrá avanzarse la fase del ensayo clínico y poder determinar también su efectividad.</p>
+                                                <p class="text-justify">Previamente ha empleado tal fármaco en modelos de ratones, donde ha obtenido resultados positivos. Sin embargo, requiere, en primer lugar, determinar la seguridad del fármaco para poder ampliarse al resto de pacientes con síndrome de Wolfram. </p>
+                                            </div>
+                                            <button type="button" class="btn btn-primary btn-lg">¡Participa!</button>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <table class="table table-bordered table-striped">
+                                            <tbody>
+                                                <tr class="success">
+                                                    <th>Presupuesto total</th>
+                                                    <td>60.000 euros</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>Presupuesto concedido</th>
+                                                    <td>0 euros</td>
+                                                </tr>
+                                                <tr class="success">
+                                                    <th>Financiación pendiente
+                                                        <td>60.000 euros</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>Duración</th>
+                                                    <td>9 meses</td>
+                                                </tr>
+                                                <tr class="success">
+                                                    <th>Año de inicio previsto</th>
+                                                    <td>2018</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
 
-                        <img src="fotos/fumi.jpg" alt="Foto del investigador"/>
 
-
-                     <table class="table table-bordered">                      
-                        <tr>
-                           <th>Presupuesto total</th>
-                           <td>60.000 euros</td>
-                        </tr>
-                        <tr>
-                           <th>Presupuesto concedido</th>
-                           <td>0 euros</td>
-                        </tr>
-                        <tr>
-                           <th>Financiación pendiente
-                           <td>60.000 euros</td>
-                        </tr>
-                        <tr>
-                           <th>Duración</th>
-                           <td>9 meses</td>
-                        </tr>
-                        <tr>
-                           <th>Año de inicio previsto</th>
-                           <td>2018</td>
-                        </tr>
-                     </table>                      
-                     <article>                              
-                     <p>Consiste en determinar la seguridad y efectividad de un medicamento para las personas, tanto niños como adultos, con síndrome de Wolfram con la finalidad de retrasar la progresión de dicho síndrome mediante los parámetros de la agudeza visual, del equilibrio y bioquímicos. Previamente se realizarán unos controles exhaustivos de los pacientes al igual que una vez finalizado el ensayo clínico.</p>
-                     <p>El Dr. Fumihiko Urano es uno de los grandes investigadores en el área del síndrome de Wolfram. Actualmente está en fase de reclutamiento de pacientes para su ensayo clínico en Washington con la finalidad de determinar la seguridad de su principio activo en pacientes con síndrome de Wolfram, teniendo en cuenta que el objetivo del fármaco es retrasar el progreso de esta compleja enfermedad. Requiere, al menos, de 24 pacientes (12 adultos y 12 niños) para llegar a cabo tal ensayo. A consecuencia de los estudios y seguimiento exhaustivos que deben realizarse en tal proyecto, en esta fase sólo pueden participar pacientes que estén próximos a su clínica. Si los resultados obtenidos son óptimos, podrá avanzarse la fase del ensayo clínico y poder determinar también su efectividad.</p>
-                     <p>Previamente ha empleado tal fármaco en modelos de ratones, donde ha obtenido resultados positivos. Sin embargo, requiere, en primer lugar, determinar la seguridad del fármaco para poder ampliarse al resto de pacientes con síndrome de Wolfram.</p>
-                     </article>                              
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -225,13 +228,14 @@
         </footer>
     </div>
     <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
-    <!-- javascript
-    ================================================== -->
+
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
     <script src="js/jquery.easing.1.3.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="plugins/flexslider/jquery.flexslider-min.js"></script>
+    <script src="plugins/flexslider/flexslider.config.js"></script>
     <script src="js/jquery.appear.js"></script>
     <script src="js/stellar.js"></script>
     <script src="js/classie.js"></script>
