--- a/web con plantilla final/project_fumix.html
+++ b/web con plantilla final/project_fumix.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WADWolfram - Únete</title>
+    <title>WADWolfram - Ensayo clínico del Dr. Fumihiko Urano</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bootstrap 3 template for corporate business" />
     <!-- css -->
@@ -11,8 +11,10 @@
     <link href="css/cubeportfolio.min.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
 
+
     <!-- Theme skin -->
     <link id="t-colors" href="skins/default.css" rel="stylesheet" />
+
 
     <!-- boxed bg -->
     <link id="bodybg" href="bodybg/bg1.css" rel="stylesheet" type="text/css" />
@@ -20,29 +22,44 @@
     <!-- =======================================================
     Author: Group13. 2017
 ======================================================= -->
+
 </head>
 
 <body>
 
-
     <div id="wrapper">
+
         <!-- start header -->
         <header>
-<nav>
+            <div class="top hide">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div id="sb-search" class="sb-search">
+                                <form>
+                                    <input class="sb-search-input" placeholder="Enter your search term..." type="text" value="" name="search" id="search">
+                                    <input class="sb-search-submit" type="submit" value="">
+                                    <span class="sb-icon-search" title="Click to start searching"></span>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        <nav>
             <div class="navbar navbar-default navbar-static-top">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="199" height="52" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logotipo de la asociación" width="199" height="52" /></a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Inicio</a></li>
-                            <li><a href="projects.html">Proyectos</a></li>
+                            <li class="active"><a href="projects.html">Proyectos</a></li>
                             <!--  <li class="dropdown">
                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Proyectos <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
@@ -63,8 +80,8 @@
 
                             <li><a href="contact.html">Contacto</a></li>
                             <li><a href="about.html">Sobre sus desarrolladores</a></li>
-                            <li class="dropdown active">
-                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="register.html">Únete</a></li>
                                     <li><a href="login.html">Inicia sesión</a></li>
@@ -74,98 +91,65 @@
                     </div>
                 </div>
             </div>
-</nav>
-
-        <!-- end header -->
+          </nav>
         <section id="inner-headline">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <ul class="breadcrumb">
                             <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-                            <li>Cuenta</li>
-                            <li class="active">Únete</li>
+                            <li><a href="projects.html">Proyectos</a></li>
+                            <li class="active">Proyecto</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
+
         </header>
+
+        <!-- end header -->
+
         <section id="content">
             <div class="container">
-
                 <div class="row">
-                    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                        <form role="form" class="register-form">
-                            <h2>Por favor regístrate <small>Totalmente gratis</small></h2>
-                            <hr class="colorgraph">
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" name="first_name" id="first_name" class="form-control input-lg" placeholder="Nombre" tabindex="1">
-                                    </div>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" name="last_name" id="last_name" class="form-control input-lg" placeholder="Apellidos" tabindex="2">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Nombre de Usuario" tabindex="3">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4">
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Contraseña" tabindex="5">
-                                    </div>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Confirma la contraseña" tabindex="6">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
+                    <div class="col-lg-12">
+                      <header>
+                        <h4 class="heading">Ensayo clínico del Dr. Fumihiko Urano</h4>
+                      </header>
 
-                                <div class="col-xs-11 col-md-11">
-                                    Haciendo click en <strong class="label label-primary">Regístrate</strong>, aceptas las <a href="#" data-toggle="modal" data-target="#t_and_c_m">condiciones y términos de uso</a> de esta página web, incluido el uso de cookies.
-                                </div>
-                            </div>
+                        <img src="fotos/fumi.jpg" alt="Foto del investigador"/>
 
-                            <hr class="colorgraph">
-                            <div class="row">
-                                <div class="col-xs-12 col-md-6">
-                                    <input type="submit" value="Regístrate" class="btn btn-theme btn-block btn-lg" tabindex="7">
-                                </div>
-                                <div class="col-xs-12 col-md-6">¿Tienes ya una cuenta? <a href="login.html">¡Entra en tu cuenta!</a></div>
-                            </div>
-                        </form>
+
+                     <table class="table table-bordered">                      
+                        <tr>
+                           <th>Presupuesto total</th>
+                           <td>60.000 euros</td>
+                        </tr>
+                        <tr>
+                           <th>Presupuesto concedido</th>
+                           <td>0 euros</td>
+                        </tr>
+                        <tr>
+                           <th>Financiación pendiente
+                           <td>60.000 euros</td>
+                        </tr>
+                        <tr>
+                           <th>Duración</th>
+                           <td>9 meses</td>
+                        </tr>
+                        <tr>
+                           <th>Año de inicio previsto</th>
+                           <td>2018</td>
+                        </tr>
+                     </table>                      
+                     <article>                              
+                     <p>Consiste en determinar la seguridad y efectividad de un medicamento para las personas, tanto niños como adultos, con síndrome de Wolfram con la finalidad de retrasar la progresión de dicho síndrome mediante los parámetros de la agudeza visual, del equilibrio y bioquímicos. Previamente se realizarán unos controles exhaustivos de los pacientes al igual que una vez finalizado el ensayo clínico.</p>
+                     <p>El Dr. Fumihiko Urano es uno de los grandes investigadores en el área del síndrome de Wolfram. Actualmente está en fase de reclutamiento de pacientes para su ensayo clínico en Washington con la finalidad de determinar la seguridad de su principio activo en pacientes con síndrome de Wolfram, teniendo en cuenta que el objetivo del fármaco es retrasar el progreso de esta compleja enfermedad. Requiere, al menos, de 24 pacientes (12 adultos y 12 niños) para llegar a cabo tal ensayo. A consecuencia de los estudios y seguimiento exhaustivos que deben realizarse en tal proyecto, en esta fase sólo pueden participar pacientes que estén próximos a su clínica. Si los resultados obtenidos son óptimos, podrá avanzarse la fase del ensayo clínico y poder determinar también su efectividad.</p>
+                     <p>Previamente ha empleado tal fármaco en modelos de ratones, donde ha obtenido resultados positivos. Sin embargo, requiere, en primer lugar, determinar la seguridad del fármaco para poder ampliarse al resto de pacientes con síndrome de Wolfram.</p>
+                     </article>                              
                     </div>
                 </div>
-                <!-- Modal -->
-                <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                <h4 class="modal-title" id="myModalLabel">Terms & Conditions</h4>
-                            </div>
-                            <div class="modal-body">
-                                <p>Condiciones de uso... y términos</p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-primary" data-dismiss="modal">Acepto</button>
-                            </div>
-                        </div>
-                        <!-- /.modal-content -->
-                    </div>
-                    <!-- /.modal-dialog -->
-                </div>
-                <!-- /.modal -->
             </div>
         </section>
 
@@ -176,7 +160,7 @@
                         <div class="widget">
                             <h4>Estamos en: </h4>
                             <address>
-					<strong>Asociación Española para la Investigación y Ayuda al Síndrome de Wolfram</strong><br>
+					<strong>Asociación Española para la Investigación y Ayuda a personas con Síndrome de Wolfram</strong><br>
 					 C/ Picadilly, nº 7, Almería, Andalucía</address>
                             <p>
                                 <i class="icon-phone"></i>653 115 307
@@ -203,7 +187,7 @@
                                 <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0">ORPHANET – Síndrome de Wolfram</a></li>
                                 <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html">Asociación Francesa del síndrome de Wolfram</a></li>
                                 <li><a href="http://wolframsyndrome.dom.wustl.edu/">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
-                                <li><a href="http://aswolfram.org/">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
+                                <li><a href="http://aswolfram.org/">Asociación Española para la Investigación y Ayuda al Síndrome de Wolfram</a></li>
                                 <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
                                 <li><a href="http://www.euro-wabb.org/es/">EURO-WABB</a></li>
                             </ul>
@@ -229,25 +213,16 @@
                             <div class="copyright">
                                 <p>&copy; Sailor Theme - All Right Reserved</p>
                                 <div class="credits">
+
                                     <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
                                 </div>
                             </div>
-
                         </div>
-                        <!--<div class="col-lg-6">
-					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
-				</div>-->
+
                     </div>
                 </div>
             </div>
         </footer>
-
     </div>
     <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
     <!-- javascript
@@ -265,6 +240,7 @@
     <script src="js/google-code-prettify/prettify.js"></script>
     <script src="js/animate.js"></script>
     <script src="js/custom.js"></script>
+
 
 </body>
 
