--- a/web con plantilla final/users.html
+++ b/web con plantilla final/users.html
@@ -43,12 +43,12 @@
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="index.html">Inicio</a></li>
+                            <li><a href="index.html">Inicio</a></li>
                             <li><a href="proyects.html">Proyectos </a></li>
                             <li><a href="blog.html">Noticias </a></li>
                             <li><a href="contact.html">Contacto </a></li>
                             <li><a href="about.html">Sobre nosotros </a></li>
-                            <li class="dropdown">
+                            <li class="dropdown active">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="login.html">Cerrar sesión</a></li>
